Serving up CSS, JS, Images and More

--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 
+  <link rel="stylesheet" href="./css/styles.css">
 	<title>About</title>
 
 </head>
 <body>
 
-  <h3>About Us</h3>
-  
+  <h2>About Us</h2>
+  <img src="./img/gentleman.jpg">
+
 </body>
 </html>
