--- a/web-server/public/help.html
+++ b/web-server/public/help.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 
+  <link rel="stylesheet" href="/css/styles.css">
 	<title>Help</title>
 
 </head>
 <body>
 
-  <h3>Help</h3>
+  <h2>Help</h2>
   
 </body>
 </html>
