--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 
+  <link rel="stylesheet" href="/css/styles.css">
 	<title>Homepage</title>
+  <script src="/js/app.js"></script>
 
 </head>
 <body>
 
-  <h3>Homepage</h3>
+  <h2>Homepage</h2>
   
 </body>
 </html>
